--- a/front/style.css
+++ b/front/style.css
@@ -4,8 +4,15 @@
 }
 
 :root {
+    /*CORES DA MARCA*/
     --azul: #1f8da5;
     --amarelo: #ffc876;
+
+    /*CORES DOS PRODUTOS*/
+    --roxo-produtos: #d7c4eb;
+    --amarelo-produtos: #ffeeb1;
+    --branco-produtos: #f3f3f5;
+    --rosa-produtos: #ffced3;
 }
 
 body {
@@ -43,14 +50,19 @@ nav img {
 .big-photo {
     position: relative;
     background-color: #b6e4fb;
-    height: 60vh;
     margin: 0 auto;
     overflow: hidden;
     padding: 10vw;
 
     display: flex;
     flex-direction: column;
+    width: auto;
+    height: 60vh;
+}
 
+.big-photo:hover>.product-image {
+    transform: scale(1.1);
+    transform-origin: center center;
 }
 
 .product-price {
@@ -79,6 +91,7 @@ nav img {
     width: 100%;
     height: 100%;
     object-fit: contain;
+    transition: .5s ease-out;
 }
 
 .product-price p {
@@ -99,6 +112,13 @@ h3 {
 
 /*/////////////PRODUCTS-CONTAINER////////////*/
 
+.center-title {
+    background-image: linear-gradient(to right, var(--roxo-produtos), var(--branco-produtos), var(--amarelo-produtos));
+    width: auto;
+    display: flex;
+    justify-content: center;
+}
+
 .products {
     width: 100vw;
     height: 100vw;
@@ -109,7 +129,6 @@ h3 {
 
 .cube {
     width: auto;
-    display: flex;
     margin: 0 auto;
     overflow: hidden;
     padding: 3vw 6vw;
@@ -120,7 +139,7 @@ h3 {
     transition: 2s;
 }
 
-.catalog-product-price{
+.catalog-product-price {
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -138,6 +157,7 @@ h3 {
 }
 
 h6 {
+    color: var(--azul);
     font-size: 120%;
 }
 
@@ -149,19 +169,19 @@ h4 {
 }
 
 #c1 {
-    background-color: #d7c4eb;
+    background-color: var(--roxo-produtos);
 }
 
 #c2 {
-    background-color: #ffeeb1;
+    background-color: var(--amarelo-produtos);
 }
 
 #c3 {
-    background-color: #f3f3f5;
+    background-color: var(--branco-produtos);
 }
 
 #c4 {
-    background-color: #ffced3;
+    background-color: var(--rosa-produtos);
 }
 
 /*/////////////FOOTER////////////*/
@@ -187,6 +207,18 @@ footer a {
 footer img {
     height: 70%;
     width: auto;
+}
+
+.options {
+    width: auto;
+    display: flex;
+    justify-content: space-around;
+    gap: 2vw;
+}
+
+a {
+    text-decoration: none;
+    color: #1f8da5;
 }
 
 /*/////////////POP-UP////////////*/
@@ -251,4 +283,36 @@ dialog input {
 dialog input::placeholder {
     color: black;
     font-size: 110%;
+}
+
+/*/////////////AJUSTES DE RESOLUCAO////////////*/
+
+@media only screen and (min-width: 1024px) {
+    .big-photo {
+        height: 90vh;
+    }
+
+    .product-price {
+        width: 22%;
+    }
+
+    .product-price p {
+        font-size: 200%;
+    }
+
+    h2 {
+        font-size: 340%;
+    }
+
+    h3 {
+        font-size: 140%;
+    }
+
+    h4 {
+        font-size: 240%;
+    }
+
+    h6 {
+        font-size: 240%;
+    }
 }
